# equifuzz

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  CHANGELOG.md  Containerfile  cabal.project  default.nix  equifuzz.cabal  equifuzz.nix  flake.nix  fourmolu.yaml  static.nix
.github/workflows/: build.yml
app/: BuildOut.hs  Experiments.hs  GenSystemC.hs  Main.hs  Meta.hs  Orchestration.hs  Runners.hs  SystemC.hs  TUI.hs  ToolRestrictions.hs  Transform.hs  Util.hs  WebUI.hs
app/BuildOut/: Internal.hs  SystemC.hs  SystemCConstant.hs  SystemCVerilog.hs  Verilog.hs  VerilogVerilog.hs
app/Experiments/: Generators.hs  Runners.hs  Types.hs
app/GenSystemC/: Config.hs  GenTransformations.hs  Reduce.hs  Transformations.hs
app/Generation/: GenSystemC.hs
app/Runners/: Jasper.hs  Util.hs  VCF.hs
containers/: Containerfile-full  build-containers.sh
docs/: Evaluation_README.md
equifuzz-gen/: Main.hs
exe/: CLI.hs  Main.hs  equifuzz-gen.hs  equifuzz-reduce.hs  equifuzz-run-magic.hs  equifuzz-run.hs  equifuzz-web.hs  equifuzz.hs
files/: Containerfile
potential_bugs/false_positives/1/: compare.tcl  mod1.v  mod2.v
resources/: style.css
src/: CLI.hs  Experiments.hs  GenSystemC.hs  Meta.hs  Orchestration.hs  Reduce.hs  Runners.hs  SystemC.hs  Testing.hs  ToolRestrictions.hs  Util.hs  WebUI.hs
src/Experiments/: Generators.hs  Types.hs
src/GenSystemC/: Config.hs  Reduce.hs  Transformations.hs
src/Runners/: Common.hs  Jasper.hs  SLEC.hs  Test.hs  Types.hs  Util.hs  VCF.hs
test/: Main.hs
