cabal-version:      3.4
name:               equifuzz
version:            0.2.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
category:           Testing
build-type:         Simple
extra-source-files: resources/style.css, resources/htmx.min.js.gz, resources/sse.js.gz

Flag evaluation_version
     description: Compile an evaluation version (some features removed)
     manual: True
     default: False

common common
    if flag(evaluation_version)
        cpp-options: -DEVALUATION_VERSION
    default-language:
        GHC2021
    build-depends:
        base >=4.16,
        optics,
        shelly,
        text,
        bytestring,
        random,
        MonadRandom
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        NoFieldSelectors
        OverloadedLabels
        ImportQualifiedPost

library
    import:
        common
    ghc-options:
        -Wall -fdefer-typed-holes -Wno-unrecognised-pragmas
    hs-source-dirs:
        src
    exposed-modules:
        Experiments,
        Experiments.Types,
        Experiments.Generators,
        Runners,
        Runners.Types,
        Runners.Util,
        Runners.VCF,
        Runners.Jasper,
        Runners.SLEC,
        SystemC,
        ToolRestrictions,
        GenSystemC,
        GenSystemC.Config,
        GenSystemC.Transformations,
        GenSystemC.Reduce,
        Util,
        WebUI,
        Orchestration,
        Meta,
        Paths_equifuzz
    build-depends:
        string-interpolate,
        uniplate,
        recursion-schemes,
        uuid,
        containers,
        mtl,
        transformers,
        prettyprinter,
        data-default-class,
        safe,
        filepath,
        scotty,
        wai,
        wai-extra,
        blaze-html,
        blaze-htmx,
        http-types,
        file-embed,
        binary,
        stm,
        time,
        async,
        process

executable equifuzz
    import:
        common
    ghc-options:
        -Wall -fdefer-typed-holes -Wno-unrecognised-pragmas -threaded -rtsopts "-with-rtsopts=-N"
    main-is:
        Main.hs
    hs-source-dirs:
        exe
    build-depends:
        equifuzz,
        optparse-applicative

Test-Suite fuzzfuzz
    import:
        common
    ghc-options:
        -Wall -Wno-unrecognised-pragmas -threaded -rtsopts "-with-rtsopts=-N"
    type:
        exitcode-stdio-1.0
    main-is:
        Main.hs
    build-depends:
        equifuzz,
        containers,
        async,
        stm,
        ansi-terminal
    hs-source-dirs:
        test
