cabal-version:      3.4
name:               equifuzz
version:            0.2.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
category:           Testing
build-type:         Simple
extra-source-files: resources/style.css, resources/htmx.min.js.gz, resources/sse.js.gz

Flag evaluation_version
     description: Compile an evaluation version (some features removed)
     manual: True
     default: False

common common
    if flag(evaluation_version)
        cpp-options: -DEVALUATION_VERSION
    ghc-options:
        -Wall -fdefer-typed-holes -Wno-unrecognised-pragmas
    default-language:
        GHC2021
    build-depends:
        base >=4.16,
        MonadRandom,
        async,
        binary,
        blaze-html,
        blaze-htmx,
        bytestring,
        containers,
        data-default-class,
        file-embed,
        filepath,
        http-types,
        mtl,
        optics,
        optparse-applicative,
        prettyprinter,
        process,
        random,
        recursion-schemes,
        safe,
        scotty,
        shelly,
        stm,
        string-interpolate,
        text,
        time,
        transformers,
        uniplate,
        uuid,
        wai,
        wai-extra,
        zip-archive,
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        NoFieldSelectors
        OverloadedLabels
        ImportQualifiedPost

common executable
       ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
       build-depends: equifuzz

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Experiments,
        Runners,
        Runners.Common,
        Runners.VCF,
        Runners.Jasper,
        Runners.SLEC,
        SystemC,
        ToolRestrictions,
        GenSystemC,
        Reduce,
        Util,
        WebUI,
        Orchestration,
        Testing,
        Meta,
        Paths_equifuzz

executable equifuzz
    import: common, executable
    other-modules: CLI
    main-is: Main.hs
    hs-source-dirs: exe

executable equifuzz-gen
    import: common, executable
    main-is: Main.hs
    hs-source-dirs: equifuzz-gen

Test-Suite fuzzfuzz
    import: common
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        equifuzz,
        containers,
        async,
        stm,
        ansi-terminal
    hs-source-dirs:
        test
