cabal-version:      3.4
name:               equifuzz
version:            0.2.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
category:           Testing
build-type:         Simple
extra-source-files: resources/style.css, resources/htmx.min.js.gz, resources/sse.js.gz

Flag evaluation_version
     description: Compile an evaluation version (some features removed)
     manual: True
     default: False

common common
    if flag(evaluation_version)
        cpp-options: -DEVALUATION_VERSION
    ghc-options:
        -Wall -fdefer-typed-holes -Wno-unrecognised-pragmas
    default-language:
        GHC2021
    build-depends:
        base >=4.16,
        MonadRandom,
        async,
        binary,
        blaze-html,
        blaze-htmx,
        bytestring,
        containers,
        data-default-class,
        file-embed,
        filepath,
        http-types,
        mtl,
        optics,
        optparse-applicative,
        prettyprinter,
        process,
        random,
        recursion-schemes,
        safe,
        scotty,
        shelly,
        splitmix,
        stm,
        string-interpolate,
        text,
        time,
        transformers,
        uniplate,
        uuid,
        wai,
        wai-extra,
        zip-archive,
        aeson
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        NoFieldSelectors
        OverloadedLabels
        ImportQualifiedPost
        DuplicateRecordFields
        QuasiQuotes

common executable
    import: common
    build-depends: equifuzz
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs: exe

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Experiments,
        Runners,
        Runners.Common,
        Runners.VCF,
        Runners.Jasper,
        Runners.SLEC,
        Runners.Test,
        SystemC,
        ToolRestrictions,
        GenSystemC,
        Reduce,
        Util,
        WebUI,
        Orchestration,
        Testing,
        CLI,
        Meta,
        Paths_equifuzz

executable equifuzz-web
    import: executable
    main-is: equifuzz-web.hs

executable equifuzz-gen
    import: executable
    main-is: equifuzz-gen.hs

executable equifuzz-run-magic
    import: executable
    main-is: equifuzz-run-magic.hs

executable equifuzz-run
    import: executable
    main-is: equifuzz-run.hs

Test-Suite fuzzfuzz
    import: common
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        equifuzz,
        containers,
        async,
        stm,
        ansi-terminal
    hs-source-dirs:
        test
